<resources>
    <string name="app_name">AndWeather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="add_new_city">Add a new city</string>
    <string name="search">Search</string>
    <string name="error_msg">This field cannot be empty</string>
    <string name="search_hint">Enter city, or zip code and country code/</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="go_back">Go back</string>
    <string name="maximum_temperature">Maximum Temperature</string>
    <string name="minimum_temperature">Minimum Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="weather">Weather</string>
    <string name="name">Name</string>
    <string name="coordinates">Coordinates</string>
    <string name="error_msg2">Please enter a city</string>
    <string name="search_error">Please search for a city</string>
    <string-array name="search_results"></string-array>


</resources>